luci-theme-design: fixes display issues on mobile
Fixes: #322, #324

--- a/themes/luci-theme-design/htdocs/luci-static/design/css/style.css
+++ b/themes/luci-theme-design/htdocs/luci-static/design/css/style.css
@@ -160,6 +160,7 @@ div {
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
 }
 
 a {
